force-app/main/default/objects/Playgroup_Session__c/Playgroup_Session__c.object-meta.xml
<CustomObject>
    <label>Playgroup Session</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Playgroup Session Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Playgroup Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>