force-app/main/default/objects/Playgroup_Session__c/fields/Animal_Playgroup__c.field-meta.xml
<CustomField>
    <fullName>Animal_Playgroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal Playgroup</label>
    <referenceTo>Animal_Playgroup__c</referenceTo>
    <relationshipLabel>Playgroup Sessions</relationshipLabel>
    <relationshipName>Playgroup_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>