force-app/main/default/objects/Playgroup_Session__c/fields/Contact_Ids__c.field-meta.xml
<CustomField>
    <fullName>Contact_Ids__c</fullName>
    <description>This field is used to hold the list of Contact Ids for this Session</description>
    <label>Contact Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>