force-app/main/default/objects/Playgroup_Session__c/fields/Playgroup_Date__c.field-meta.xml
<CustomField>
    <fullName>Playgroup_Date__c</fullName>
    <formula>DATEVALUE( Playgroup_Date_Time__c )</formula>
    <label>Playgroup Date</label>
    <type>Date</type>
</CustomField>