force-app/main/default/objects/Playgroup_Session__c/fields/Playgroup_Leader__c.field-meta.xml
<CustomField>
    <fullName>Playgroup_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Playgroup Leader</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Playgroup Sessions</relationshipLabel>
    <relationshipName>Playgroup_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>