force-app/main/default/objects/Playgroup_Session__c/fields/Playgroup_Location__c.field-meta.xml
<CustomField>
    <fullName>Playgroup_Location__c</fullName>
    <label>Playgroup Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indoor Play Yard</fullName>
            </value>
            <value>
                <fullName>Outdoor Play Yard</fullName>
            </value>
            <value>
                <fullName>MRC Indoor Play Yard</fullName>
            </value>
            <value>
                <fullName>MRC Outdoor Play Yard</fullName>
            </value>
            <value>
                <fullName>Monster Park</fullName>
            </value>
            <value>
                <fullName>ARC Terrace</fullName>
            </value>
            <value>
                <fullName>SBR</fullName>
            </value>
            <value>
                <fullName>Playroom 1</fullName>
            </value>
            <value>
                <fullName>Playroom 2</fullName>
            </value>
            <value>
                <fullName>Playroom 1 &amp; 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>