force-app/main/default/objects/Playgroup_Session__c/fields/Playgroup_Notes__c.field-meta.xml
<CustomField>
    <fullName>Playgroup_Notes__c</fullName>
    <label>Playgroup Notes</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>