force-app/main/default/objects/Playgroup_Session__c/fields/Population__c.field-meta.xml
<CustomField>
    <fullName>Population__c</fullName>
    <label>Population</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRC</fullName>
            </value>
            <value>
                <fullName>MRC</fullName>
                <default>true</default>
                <label>MRC</label>
            </value>
            <value>
                <fullName>ARC &amp; CARE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>