force-app/main/default/objects/Playgroup_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Playgroup_Date_Time__c</columns>
    <columns>Playgroup_Leader__c</columns>
    <columns>Playgroup_Location__c</columns>
    <columns>Playgroup_Notes__c</columns>
    <columns>Animal_Playgroup__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>